
  Fulfill feature request 1723753 - Agent service needed. Agents can now be
  started in a "daemon" mode where they automatically reconnect to a console.
  Thanks to Travis Bear for the request, and to Pawel Lacinski for the
  initial implementation.

  Fix bug 1926601 - Jython change breaks byte arrays in generated scripts.
  Thanks to Dhinakar K and O.A.Francis for reporting this.


The Grinder 3.0.1
-----------------

  Fix bug 1876273 - grinder.jar has incorrect manifest classpath.


The Grinder 3.0
---------------

  The console now expects a properties file to be selected, rather than a
  script. The properties file determines the script to run through the
  grinder.script property. Other properties override the values in the
  agents' local grinder.properties file. This provides much better
  centralised control from the console.

  Updates to the German console translation from Matthias Diller.

  Fix bug 1808854 - Incorrect synchronisation in TestStatisticsMap.
  Thanks to Ishan Oshadi Jayawardene for the report.

  Partially address feature request in bug 1688988 by translating
  InterruptedIOExceptions due to timeouts in HTTPClient code to a
  specific TimeoutException. Thanks to Andrew McGuigan for the report.

  Fix bug 1700158 - ShutdownException thrown when using
  grinder.duration. Thanks to Caroline Rioux for the report.

  Update the cookie.py example to show how to send a cookie, and to
  retrieve and modify the cookies for the current thread. Thanks to
  "tz" and Ying Moy for prompting me to do this.

  Fix bug 1825639 - "Connection ... already opened" when recording HTTPS.
  Thanks to Peter Zadrozny and Brian Dols for the report.

  Refine logging:
  - The first error message is written to the terminal as well as the
    error log. This is handy for catching script typos.
  - Don't word wrap log messages from the Agent.
  - Don't truncate log lines to an arbitrary number of characters.
